<resources>
    <string name="app_name">Focus Scrambler</string>
    <string name="welcome_back_please_sign_in">Welcome Back! Please sign in.</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_first_name_here">Enter First Name here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name_here">Enter Last Name here</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="_00_00">00:00</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="today_s_progress">Today\'s Progress</string>
    <string name="title_activity_dashboard_withnav_page">dashboard_withnav_page</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="welcome">Welcome !</string>
    <string name="create">CREATE</string>
    <string name="login">LOGIN</string>
    <string name="account">Account</string>
    <string name="activities">Activities</string>
    <string name="home">Home</string>
</resources>