<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/wave_3"
    android:layout_height="match_parent"
    tools:context=".signup_page">

    <Button
        android:id="@+id/btn_signup_page"
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="9dp"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:gravity="start"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/lbl_already_have_an_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        tools:ignore="MissingConstraints,SmallSp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="346dp"
        android:layout_height="647dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:src="@drawable/login_blue_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_signup"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/txt_confirmpass"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints="false"
        android:background="@drawable/edittext_border"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/lbl_confirmpass" />

    <TextView
        android:id="@+id/lbl_confirmpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/txt_pass" />

    <EditText
        android:id="@+id/txt_pass"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints="false"
        android:background="@drawable/edittext_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/lbl_pass" />

    <TextView
        android:id="@+id/lbl_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints="false"
        android:background="@drawable/edittext_border"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/lbl_email" />

    <TextView
        android:id="@+id/lbl_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/txt_user" />

    <EditText
        android:id="@+id/txt_user"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints="false"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_user_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/lbl_user" />

    <TextView
        android:id="@+id/lbl_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/txt_lname" />

    <TextView
        android:id="@+id/lbl_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_3" />

    <EditText
        android:id="@+id/txt_fname"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints="false"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_first_name_here"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/lbl_fname" />

    <TextView
        android:id="@+id/lbl_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <EditText
        android:id="@+id/txt_lname"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:autofillHints="false"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_last_name_here"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/lbl_lname" />

    <TextView
        android:id="@+id/lbl_lname"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/last_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/txt_fname" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/txt_confirmpass"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/lbl_already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <ImageView
        android:id="@+id/logo_3"
        android:layout_width="157dp"
        android:layout_height="102dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="134dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbl_signup"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/copy_of_draft_focus_scrambler__2_" />

</androidx.constraintlayout.widget.ConstraintLayout>