<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <ImageView
        android:id="@+id/dialog_img_panel"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_blue_panel" />

    <TextView
        android:id="@+id/dialog_txt_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textColor="@color/black"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_img_panel"
        app:layout_constraintEnd_toEndOf="@+id/dialog_img_panel"
        app:layout_constraintStart_toStartOf="@+id/dialog_img_panel"
        app:layout_constraintTop_toTopOf="@+id/dialog_img_panel" />

    <Button
        android:id="@+id/dialog_btn_subtract"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:text="-"
        android:textSize="20sp"
        android:backgroundTint="#FF6666"
        app:layout_constraintEnd_toStartOf="@+id/dialog_txt_timer"
        app:layout_constraintTop_toTopOf="@+id/dialog_txt_timer"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_txt_timer" />

    <Button
        android:id="@+id/dialog_btn_add"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:text="+"
        android:textSize="20sp"
        android:backgroundTint="#66FF66"
        app:layout_constraintStart_toEndOf="@+id/dialog_txt_timer"
        app:layout_constraintTop_toTopOf="@+id/dialog_txt_timer"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_txt_timer" />

    <Button
        android:id="@+id/dialog_btn_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button_green"
        android:text="@string/start"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/dialog_btn_pause"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_img_panel" />

    <Button
        android:id="@+id/dialog_btn_pause"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button_yellow"
        android:text="@string/pause"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/dialog_btn_stop"
        app:layout_constraintStart_toEndOf="@+id/dialog_btn_start"
        app:layout_constraintTop_toTopOf="@+id/dialog_btn_start" />

    <Button
        android:id="@+id/dialog_btn_stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_red"
        android:text="@string/stop"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_btn_pause"
        app:layout_constraintTop_toTopOf="@+id/dialog_btn_start" />

</androidx.constraintlayout.widget.ConstraintLayout>