<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="411dp"
        android:layout_height="733dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".fragment_dashboard_page">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="411dp"
            android:layout_height="20dp"
            android:background="?attr/colorPrimary"
            android:title="Dashboard"
            android:titleTextColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:text="@string/quick_actions"
            android:textColor="#102f75"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="115dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_button_red"
            android:drawableStart="@drawable/icons8_stop_24"
            android:text="@string/stop"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/btn_pause"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="316dp"
            android:layout_height="198dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_blue_panel" />

        <TextView
            android:id="@+id/txt_timer"
            android:layout_width="256dp"
            android:layout_height="120dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="132dp"
            android:text="@string/_00_00"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="90sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="115dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_button_green"
            android:drawableStart="@drawable/icons8_play_24"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="115dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_button_yellow"
            android:drawableStart="@drawable/icons8_pause_24"
            android:text="@string/pause"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/btn_start"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="405dp"
            android:layout_height="64dp"
            android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_pause"
            app:srcCompat="@drawable/rectangle_lightazure_panel_bg" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="216dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="432dp"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/round_progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_sessions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="0/0 Sessions"
            android:textAlignment="center"
            android:textColor="#59b1c2"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/progressBar3"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:text="@string/today_s_progress"
            android:textColor="#102f75"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_start" />

        <Button
            android:id="@+id/btn_add_activity"
            android:layout_width="167dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button_orange"
            android:drawableStart="@drawable/icons8_add_24"
            android:text="Add Activity"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btn_history"
            android:layout_width="167dp"
            android:layout_height="42dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button_gray"
            android:drawableStart="@drawable/icons8_history_24"
            android:text="History"
            android:tint="#FF0000"
            app:layout_constraintStart_toEndOf="@+id/btn_add_activity"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <fragment
        android:id="@+id/nav_host_fragment_activity_dashboard_withnav_page"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>